# nuke_util

./: .gitignore  CMakeLists.txt  LICENSE
include/Utlt/: log.hpp
include/nkutil/: console_color.hpp  logging.hpp  timer.hpp
include/util/: format.hpp
include/util/log/: LogColor.hpp  LogLogger.hpp
src/: log.cpp  log_color.cpp  logging.cpp  timer.cpp
src/log/: LogLogger.cpp
test/: LogTest.cpp  all_test.cpp  log_test.cpp
